@@ -119,7 +119,6 @@ public class JRRtfExporter extends JRAbstractExporter
 	private int zorder = 1;
 
 	private Map fontMap = null;
-	protected JRHyperlinkProducerFactory hyperlinkProducerFactory;
 
 
 	/**
@@ -210,11 +209,6 @@ public class JRRtfExporter extends JRAbstractExporter
 		{
 			resetExportContext();
 		}
-	}
-
-	protected void setHyperlinkProducerFactory()
-	{
-		hyperlinkProducerFactory = (JRHyperlinkProducerFactory) parameters.get(JRExporterParameter.HYPERLINK_PRODUCER_FACTORY);
 	}
 
 	/**
@@ -1555,12 +1549,6 @@ public class JRRtfExporter extends JRAbstractExporter
 			}
 			writer.write("}}}");
 		}
-	}
-
-
-	protected JRHyperlinkProducer getCustomHandler(JRPrintHyperlink link)
-	{
-		return hyperlinkProducerFactory == null ? null : hyperlinkProducerFactory.getHandler(link.getLinkType());
 	}
 
 
