@@ -7,6 +7,8 @@ JasperReports 3.1.4 (2009-02-10)
 
 - frame name as hyperlink target with support for target producers;
 
+- hyperlink producers and target producers available as extensions;
+
 - multiple scriplets per report;
 
 - report governors for max pages and timeout;
